0023071: Comparison of file extension is case sensitive

Fix makes a temporary copy of the filename and its extension and converts both to lowercase for comparison.